--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      #root{height:100vh;}
+    </style>
     <title>StudyTogether</title>
   </head>
   <body>
