[STUD-65] Fixed horizontal overflow bug

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      #root{height:100vh;}
+      #root{height:100vh; overflow-x: hidden;}
     </style>
     <title>StudyTogether</title>
   </head>
