fixed incorrect positioning of notification bell popup menu

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -26,6 +26,16 @@
     -->
     <style>
       #root{height:100vh;}
+
+      .chakra-popover__popper{
+          position: absolute;
+          right:0 !important;
+      }
+      .chakra-popover__popper > section{
+          position: absolute;
+          right:0 !important;
+          top:45px;
+      }
     </style>
     <title>StudyTogether</title>
   </head>
